--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .hero {
     background: url(../images/fundo.png);
     padding-top: 64px;
@@ -18,7 +20,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        background-color: #000;
+        background-color: variables.$secondaryTextColor;
         opacity: .7;
     }
 
